# fidelity-docker-workshop

./: README.md  multi-root.code-workspace
exercise-1/: README.md
exercise-1/html/: index.html
exercise-2/: Dockerfile.example  Makefile  README.md  app.py  pyproject.toml  test_app.py
exercise-3/: .dockerignore  Dockerfile.example  Makefile  README.md  app.py  pyproject.toml  test_app.py
exercise-4/: Dockerfile  Makefile  README.md  app.py  docker-compose-example.yml  pyproject.toml  supersecret.txt
exercise-5/: README.md
