[tool.poetry]
name = "exercise-3"
version = "0.1.0"
description = ""
authors = ["RT <d3vadv3ntur3s@users.noreply.github.com>"]

packages = [
    { include = "./web"}
]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
